# streaming-etl-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dashboard  Dockerfile.producer  Dockerfile.spark  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  terraform-deploy.yml
dags/: batch_pipeline_dag.py  streaming_pipeline_dag.py
docs/: ARCHITECTURE.md  DEMO.md  INTERVIEW_PREP.md  TEARDOWN.md  reality-check.md
great_expectations/: great_expectations.yml
great_expectations/expectations/: sensor_bronze.json  sensor_silver.json
monitoring/grafana/dashboards/: pipeline_health.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: core-smoke.sh  deploy.sh  shell-smoke.sh  teardown.sh
src/consumers/: spark_streaming.py
src/dashboard/: __init__.py  app.py
src/loaders/: redshift_loader.py  redshift_schema.sql
src/producers/: sensor_simulator.py
src/quality/: expectations.py
src/transformations/: bronze_to_silver.py  silver_to_gold.py
terraform/: dashboard_shell.tf  ecr.tf  emr.tf  main.tf  msk.tf  mwaa.tf  outputs.tf  redshift.tf  s3.tf  variables.tf
terraform/bootstrap/: install-deps.sh
tests/: conftest.py  test_integration.py  test_loader.py  test_producer.py  test_quality.py  test_transformations.py
